Use org.openrewrite.java.migrate.UpgradeToJava21
See https://docs.openrewrite.org/recipes/java/migrate/upgradetojava21